class ItCantFly implements  FlyBehaviour{
    public String Fly(){
        return "Can't Fly";
    }
}