class ItFly implements FlyBehaviour{
     public String Fly(){
         System.out.println("It will Fly\n");
         return "Fly";
     }
}